# reqwest_as_cpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  LICENSE  lib.cpp  main.cpp  readme.md
include/: lib.h
src/: google_requester.rs  lib.rs
