[package]
name = "reqwest_as_cpp"
version = "0.1.0"
edition = "2021"
authors = ["Yasin Guenduez <yasinguenduez1@gmail.com>"]


[dependencies]
reqwest = { version = "0.11.17", features = ["rustls-tls", "blocking"], default-features = false }
cxx = "1"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"